[package]
name = "message_bender"
description = "a discord bot that lets you edit other people's messages"
repository = "https://github.com/laralove143/edit-any-message-discord-bot"
version = "0.1.0"
keywords = ["discord"]
categories = ["http-client"]
authors = ["laralove143 <laralove143@icloud.com>"]
license = "MIT"
edition = "2021"

[dependencies]
twilight-gateway = { version = "0.11", default-features = false, features = [
    "rustls-native-roots",
    "zlib-simd",
] }
twilight-http = { version = "0.11", default-features = false, features = [
    "decompression",
    "rustls-native-roots",
    "trust-dns",
] }
twilight-model = { version = "0.11" }
twilight-cache-inmemory = { version = "0.11", features = [
    "permission-calculator",
] }
twilight-util = { version = "0.11", features = ["builder"] }
twilight-interactions = "0.11"
twilight-webhook = "0.11"
twilight-error = "0.11"

tokio = { version = "1.17", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
anyhow = { git = "https://github.com/laralove143/anyhow" }
thiserror = "1.0"
dashmap = "5.2"
dotenvy = "0.15"
